# musical_note_detector

./: LICENSE  README.md  app.py  conftest.py  pyproject.toml  requirements.txt
core/: audio.py  model.py  shared.py
pages/: bayesian.py  detector.py  notes.py
tests/: test_audio.py  test_model.py
