[project]
name = "musical-note-detector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.5",
    "pandas>=3.0.3",
    "pytest>=9.0.3",
    "scipy>=1.17.1",
    "sounddevice>=0.5.5",
    "streamlit>=1.57.0",
]
